--- a/style.css
+++ b/style.css
@@ -22,14 +22,18 @@ html, body{
     width: 100%;
     display: grid;
     grid-template-rows: 20% 60% 20%;
+    grid-template-areas:"logo"
+                        "play_button"
+                        "text";
 }
 
 .logo{
+    grid-area: logo;
 }
 
 
 .play_button{
-
+    grid-area: play_button;
 }
 
 .header_image{
@@ -40,7 +44,21 @@ html, body{
 .item_1_text{
     flex-basis: 0;
     font-size: medium;
+    grid-area: text;
+}
 
+@media screen and (min-width: 480px)  {
+    .play_menu{
+        height: 100%;
+        width: 100%;
+        display: grid;
+        grid-template-rows: 33% 34% 33%;
+        grid-template-columns: 50% 50%;
+        grid-template-areas:"logo play_button"
+                            ". play_button"
+                            "text play_button";
+    }
+    
 }
 
 .item_2{
